Change jvm args and travis wait time